# CtrlAltFocus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bopit.py  browser.py  config_files.yaml  inactivity_tracker.py  incentive.py  main.cpp  main.py  punishment.py  requirements.txt  snoopy_animations.py  start.ps1  test.cpp
